assets/css/style.css
/* ... */
th:first-child, td:first-child {
  padding-left: 0;
}

th:last-child, td:last-child {
  padding-right: 0;
}

tt, code {
  background-color: rgba(0, 0, 0, 0.04);
  border-radius: 3px;
  font-family: "SFMono-Regular", Consolas, "Roboto Mono", "Droid Sans Mono", "Liberation Mono", Menlo, Courier, monospace;
  padding: 0;
  padding-top: 0.2em;
  padding-bottom: 0.2em;
}

pre code {
  background: none;
  line-height: 1.42;
}

code:before, code:after, tt:before, tt:after {
  letter-spacing: -0.2em;
  content: " ";
}

pre code:before, pre code:after, pre tt:before, pre tt:after {
  content: none;
}

a {
  color: inherit;
}

a:hover {
  color: #3498DB;
}

@media only screen and (max-width: 480px) {
  blockquote {
    margin-left: -1.05rem;
    padding-left: 0.7875rem;
    margin-right: 0;
  }
}
* {
  box-sizing: border-box;
}

html,
body {
  height: 100%;
}

body {
  max-width: 100%;
  display: flex;
  flex-direction: column;
  position: relative;
}

main {
  overflow-x: hidden;
  flex: 1 0 auto;
}

section {
  padding: 1.4rem 1.68rem;
  margin-bottom: 1.4rem;
}

.section-first {
  margin-top: 5.2rem;
}

a {
  transition: all 0.2s cubic-bezier(0.165, 0.84, 0.44, 1);
}

h1,
h2,
h3,
h4,
h5 {
  font-weight: 700;
}

li {
  list-style: none;
  margin-bottom: 0;
}

li > ol {
  margin-bottom: 0;
}

li > ul {
  margin-bottom: 0;
  margin-top: 0;
}

td:first-child {
  font-weight: 700;
}

td,
th {
  border-bottom: 0px;
  padding-top: 0.6rem;
  padding-bottom: 0px;
  font-size: large;
}

input {
  border: 2px solid rgba(0, 0, 0, 0.871);
  margin-bottom: 1.4rem;
}

article h2 img {
  height: 40px;
  margin-bottom: 0px;
  vertical-align: middle;
  margin-right: 5px;
}

article h2 {
  font-weight: 500;
}

article p a {
  padding: 0.56rem;
  background: rgba(0, 0, 0, 0.871);
  color: white;
  border: 2px solid rgba(0, 0, 0, 0.871);
  transition: all 0.3s cubic-bezier(0.455, 0.03, 0.515, 0.955);
  border-radius: 30px;
  -webkit-appearance: button;
  -moz-appearance: button;
  min-width: 167px;
  text-decoration: none;
  text-align: center;
  font-size: medium;
}

hr {
  width: 100%;
}

@media only screen and (min-width: 534px) {
  main {
    padding: 1.4rem 2.1rem;
  }
}
@media only screen and (min-width: 700px) {
  main {
    padding: 1.4rem 7rem;
  }
}
@media only screen and (min-width: 1200px) {
  main {
    padding: 1.4rem 14rem;
  }
}
.title {
  margin: 1.4rem 0;
  margin-top: 0;
  width: 100%;
  position: absolute;
  z-index: 99;
}
.title h1 {
  margin-bottom: 0;
  font-weight: 500;
  font-size: 1.1666666667rem;
}

.title-break {
  border-bottom: 1px solid rgba(0, 0, 0, 0.5);
  margin-top: 5px;
}

.bar-navigation {
  padding: 0 1.68rem;
  display: flex;
  justify-content: space-between;
  box-shadow: 0px 3px 6px rgba(23, 23, 23, 0.55);
  background-color: white;
  width: 100%;
}

.sticky {
  position: fixed;
  top: 0;
}

.button-title {
  padding: 0;
  width: auto;
  height: 100%;
  text-align: left;
  margin: 0;
  border: none;
}
.button-title:hover, .button-title:active {
  transform: scale(1);
  background: none;
  color: rgba(0, 0, 0, 0.871);
}

@media only screen and (min-width: 534px) {
  .bar-navigation {
    padding: 1rem 3.78rem;
  }
}
@media only screen and (min-width: 700px) {
  .bar-navigation {
    padding: 1rem 8.68rem;
  }
}
@media only screen and (min-width: 1200px) {
  .bar-navigation {
    padding: 1rem 15.68rem;
  }
}
footer {
  padding: 0.7rem 0;
  border-top: 1px solid rgba(0, 0, 0, 0.12);
  background: white;
  flex-shrink: 0;
}
footer a {
  text-decoration: none;
}
footer img {
  height: 100%;
  vertical-align: middle;
}
footer ul {
  margin: 0;
  padding: 0 1.68rem;
  display: flex;
  flex-flow: row wrap;
  justify-content: flex-end;
  align-items: center;
}
footer ul li {
  margin: 0 0.28rem;
  flex: 0 0 1rem;
  height: 28px;
}

.copyright {
  flex-basis: 3rem;
}

.list-logo {
  flex: 0 1 auto;
}
.list-logo a {
  width: 100%;
}
.list-logo img {
  width: auto;
  max-width: 50%;
  display: inline-block;
  object-fit: contain;
}
.list-logo span {
  font-size: 0.6666666667rem;
  margin-right: 0.25rem;
}

.list-break {
  box-sizing: border-box;
  border-right: 1px solid black;
  height: 35px;
  max-width: 2px;
  margin: 0 0.2rem;
}

@media only screen and (max-width: 375px) {
  .copyright {
    order: 4;
    flex: 1 100%;
    margin-top: 1rem;
    text-align: center;
  }
}
nav {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  z-index: 2;
  height: 100vh;
  overflow-y: auto;
  padding: 1.4rem 2.8rem;
  display: flex;
  flex-flow: column nowrap;
  align-items: flex-start;
  align-content: flex-start;
  background: white;
  visibility: hidden;
  opacity: 0;
  transition: all 0.4s cubic-bezier(1, 0, 0, 1);
}
nav form,
nav .button-email {
  margin-bottom: 0;
}

.navigation-active {
  visibility: visible;
  opacity: 1;
}

.container-nav {
  margin: auto;
}
.container-nav a {
  text-decoration: none;
}
.container-nav li {
  margin-bottom: 0;
}

@media only screen and (min-width: 500px) and (max-width: 1200px) {
  nav {
    align-content: center;
  }
  nav * {
    width: 100%;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
    align-items: center;
  }
  nav ul {
    margin-top: 2.8rem;
    display: block;
  }
  nav form input {
    max-width: 50%;
  }
  nav form button {
    max-width: 25%;
  }
}
@media only screen and (min-width: 1200px) {
  nav {
    position: relative;
    padding: 0;
    width: auto;
    height: auto;
    background: none;
    visibility: visible;
    opacity: 1;
    display: block;
  }
  nav ul {
    margin-bottom: 0;
    display: flex;
  }
  nav ul li {
    padding: 0.7rem 0rem 0.7rem 1.8rem;
  }
}
fieldset {
  border: none;
}

input {
  padding: 1.4rem;
  max-width: 80%;
  height: 2.8rem;
}

button {
  width: 50%;
}

.container-email_nav form {
  margin: auto;
}

.section-email form fieldset > * {
  margin-left: 50%;
  transform: translateX(-50%);
  width: 100%;
}
.section-email form button {
  width: 50%;
}
/* ... */

